--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "proxy": "http://51.20.9.103:3001",
   "dependencies": {
     "@emotion/react": "^11.4.1",
     "@emotion/styled": "^11.3.0",
