--- a/.env
+++ b/.env
@@ -1,1 +1,1 @@
-REACT_APP_SERVER_HOSTNAME = https://51.20.9.103/
+REACT_APP_SERVER_HOSTNAME = https://amazon-clone-backend-bhardwajmayank7-bhardwajmayank7s-projects.vercel.app
